--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="img-bold">
             <figure>
                 <img src="img/metallica_72.jpg  " alt="Banda em um show">
-                <figcaption>Banda tocando no aniversário do álbum Master of Puppets</figcaption>
+                <figcaption>Banda no novo álbum 72 seasons</figcaption>
             </figure>
         </div>
         <!-- Mais informações -->
